Resolves: tdf#42873 videos in presenter console misplaced

Change-Id: Ib7559246f6f3173acea72268db0489b79df38ae3